--- a/.isort.cfg
+++ b/.isort.cfg
@@ -9,4 +9,4 @@ multi_line_output=3
 skip=[".gitignore", ".dockerignore"]
 extend_skip=.md,.json
 use_parentheses=True
-known_third_party=click,codetiming,pytest,setuptools
+known_third_party=click,codetiming,dateutil,jinja2,jsonschema,pytest,setuptools
